--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,6 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
 version: 1.0.0+1
 
 environment:
@@ -19,6 +18,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   animated_custom_dropdown: ^1.2.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
