--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_rating_bar: ^4.0.1
+  blinking_text: ^1.0.2
 
 dev_dependencies:
   flutter_test:
