--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_rating_bar: ^4.0.1
   blinking_text: ^1.0.2
+  marquee: ^2.2.3
 
 dev_dependencies:
   flutter_test:
